@@ -424,6 +424,8 @@ type S2iBuilderStatus struct {
 	LastRunState RunState `json:"lastRunState,omitempty"`
 	//LastRunState return the name of the newest run of this builder
 	LastRunName *string `json:"lastRunName,omitempty"`
+	//LastRunStartTime return the startTime of the newest run of this builder
+	LastRunStartTime *metav1.Time `json:"lastRunStartTime,omitempty"`
 }
 
 // +genclient
@@ -435,6 +437,7 @@ type S2iBuilderStatus struct {
 // +kubebuilder:printcolumn:name="RunCount",type="integer",JSONPath=".status.runCount"
 // +kubebuilder:printcolumn:name="LastRunState",type="string",JSONPath=".status.lastRunState"
 // +kubebuilder:printcolumn:name="LastRunName",type="string",JSONPath=".status.lastRunName"
+// +kubebuilder:printcolumn:name="LastRunStartTime",type="date",JSONPath=".status.lastRunStartTime"
 // +kubebuilder:resource:shortName=s2ib
 type S2iBuilder struct {
 	metav1.TypeMeta   `json:",inline"`
